tests/fixtures/errors/arm_method_collision.z
# arm_method_collision.z -- an as-block method may not share a name with an
# arm of the same variant/union (the method would silently clobber the arm).

shade: variant {
    a: null
    b: i64
} as {
    b: function {:this} out i64 is {
        return 1
    }
}

pool: union {
    text: String
    free: null
} as {
    free: function {:this} out bool is {
        return true
    }
}

main: function is {
    s: shade.a
    p: pool.free
    print "made \{s.a} \{p.free}"
}
